feat: api readSku & swagger product
